@@ -433,11 +433,9 @@ void Npc_sleep_timer::handle_event
 			npc->clear_flag(Obj_flags::asleep);
 			int frnum = npc->get_framenum();
 			if ((frnum&0xf) == Actor::sleep_frame)
-				{	// Stand up.
-				gwin->add_dirty(npc);
-				npc->set_frame(Actor::standing | (frnum&0x30));
-				gwin->add_dirty(npc);
-				}
+					// Stand up.
+				npc->change_frame(
+					Actor::standing | (frnum&0x30));
 			}
 		delete this;
 		return;
